--- a/less/style.less
+++ b/less/style.less
@@ -75,47 +75,50 @@
     }
 }
 
-.skillsWrap {
-    background: url(../images/skills_background.jpg);
-    background-size: cover;
-    min-height: 714px;
-    height: 100%;
-}
+main {
 
-.portfolioWrap {
-    background: url(../images/portfolio_background.jpg);
-    background-size: cover;
-    min-height: 1220px;
-    height: 100%;
-    padding: 100px 0 60px 0;
-
-    .container {
-        padding: 0;
+    .skillsWrap {
+        background: url(../images/skills_background.jpg);
+        background-size: cover;
+        min-height: 714px;
+        height: 100%;
     }
-}
-
-.ourTeamWrap {
-    background: url(../images/ourTeam_background.jpg);
-    background-size: cover;
-    min-height: 1018px;
-    height: 100%;
-    padding: 100px 0 80px 0;
-}
-
-.testimonialsWrap {
-    background: url(../images/testimonials_background.jpg);
-    background-size: cover;
-    min-height: 714px;
-    height: 100%;
-    padding: 134px 0 142px 0;
-}
-
-.ourClientsWrap {
-    background: url(../images/ourClients_background.jpg);
-    background-size: cover;
-    min-height: 766px;
-    height: 100%;
-    padding: 94px 0 90px 0;
+    
+    .portfolioWrap {
+        background: url(../images/portfolio_background.jpg);
+        background-size: cover;
+        min-height: 1220px;
+        height: 100%;
+        padding: 100px 0 60px 0;
+    
+        .container {
+            padding: 0;
+        }
+    }
+    
+    .ourTeamWrap {
+        background: url(../images/ourTeam_background.jpg);
+        background-size: cover;
+        min-height: 1018px;
+        height: 100%;
+        padding: 100px 0 80px 0;
+    }
+    
+    .testimonialsWrap {
+        background: url(../images/testimonials_background.jpg);
+        background-size: cover;
+        min-height: 714px;
+        height: 100%;
+        padding: 134px 0 142px 0;
+    }
+    
+    .ourClientsWrap {
+        background: url(../images/ourClients_background.jpg);
+        background-size: cover;
+        min-height: 766px;
+        height: 100%;
+        padding: 94px 0 90px 0;
+    }
 }
 
 .footerWrap {
